chore: add recipes

--- a/app/blog/articles/ramen-noodles.mdx
+++ b/app/blog/articles/ramen-noodles.mdx
@@ -1,5 +1,28 @@
-This is a **ramen noddles** recipe
+# Ramen Noodles Recipe
 
-- One
-- Two
-- Three
+## Ingredients
+
+- Water
+- Ramen Noodles
+
+## Step by step
+
+### Step one
+
+Put the water to boil
+
+### Step two
+
+Put the noodles inside
+
+### Step three
+
+Put it all inside a bowl
+
+### Step four
+
+Add the condiments
+
+### Step five
+
+Enjoy
