--- a/app/blog/articles/tea.mdx
+++ b/app/blog/articles/tea.mdx
@@ -1,5 +1,36 @@
-This is a **tea** recipe
+# Tea Recipe
 
-- One
-- Two
-- Three
+## Ingredients
+
+- Water
+- Tea
+
+## Step by step
+
+### Step one
+
+Put the water to boil
+
+### Step two
+
+Put the water in the cup
+
+### Step three
+
+Add the tea bag
+
+### Step four
+
+Wait until it dissolves
+
+### Step five
+
+Add the sugar
+
+### Step six
+
+Mix the tea
+
+### Step seven
+
+Enjoy
